==> Samsung/TizenRT/os/arch/arm/src/imxrt/imxrt_gpio.c <==
#include <tinyara/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <errno.h>
#include <tinyara/irq.h>
#include "chip.h"
#include "up_arch.h"
#include "imxrt_iomuxc.h"
#include "imxrt_gpio.h"
#include "chip/imxrt_daisy.h"
#define IMXRT_PADMUX_INVALID    255

int imxrt_config_gpio(gpio_pinset_t pinset)
{
	irqstate_t flags;
	int ret;

	/* Configure the pin as an input initially to avoid any spurious outputs */

	flags = irqsave();

	/* Configure based upon the pin mode */

	switch (pinset & GPIO_MODE_MASK) {
	case GPIO_INPUT: {
		/* Configure the pin as a GPIO input */

		ret = imxrt_gpio_configinput(pinset);
	}
	break;

	case GPIO_OUTPUT: {
		/* First configure the pin as a GPIO input to avoid output
			* glitches.
			*/

		ret = imxrt_gpio_configinput(pinset);
		if (ret >= 0) {
			/* Convert the input to an output */

			ret = imxrt_gpio_configoutput(pinset);
		}
	}
	break;

	case GPIO_PERIPH: {
		/* Configure the pin as a peripheral */

		ret = imxrt_gpio_configperiph(pinset);
	}
	break;

#ifdef CONFIG_IMXRT_GPIO_IRQ
	case GPIO_INTERRUPT: {
		/* Configure the pin as a GPIO input */

		ret = imxrt_gpio_configinput(pinset);
		if (ret == OK) {
			ret = imxrt_gpioirq_configure(pinset);
		}
	}
	break;
#endif

	default:
		ret = -EINVAL;
		break;
	}

	irqrestore(flags);
	return ret;
}

void imxrt_gpio_write(gpio_pinset_t pinset, bool value)
{
	irqstate_t flags;
	int port = (pinset & GPIO_PORT_MASK) >> GPIO_PORT_SHIFT;
	int pin = (pinset & GPIO_PIN_MASK) >> GPIO_PIN_SHIFT;

	DEBUGASSERT((unsigned int)port < IMXRT_GPIO_NPORTS);

	flags = irqsave();
	imxrt_gpio_setoutput(port, pin, value);
	irqrestore(flags);
}

bool imxrt_gpio_read(gpio_pinset_t pinset)
{
	irqstate_t flags;
	int port = (pinset & GPIO_PORT_MASK) >> GPIO_PORT_SHIFT;
	int pin = (pinset & GPIO_PIN_MASK) >> GPIO_PIN_SHIFT;
	bool value;

	DEBUGASSERT((unsigned int)port < IMXRT_GPIO_NPORTS);

	flags = irqsave();
	value = imxrt_gpio_getinput(port, pin);
	irqrestore(flags);
	return value;
}
